Fix layout issues in Chromeless view on iOS app.
- The spacer div is no longer necessary and is actually interferring
  with the layout, so remove it.
- Fix the height of the chat block div to 100vh.
- Make the height of the scrollable div with messages no higher than
  100vh - 50px (with 50px reserved for the actions div with the reset
  button).
- Remove the overscroll (rubber band) fix, which was no longer working
  and was causing weird effects when scrolling.

--- a/chat/public/css/chat.css
+++ b/chat/public/css/chat.css
@@ -25,6 +25,7 @@ body.view-in-course .course-wrapper.chromeless {
 
 .course-wrapper.chromeless .chat-block {
     width: 100vw;
+    height: 100vh;
     display: block;
     overflow: auto;
 }
@@ -47,7 +48,7 @@ body.view-in-course .course-wrapper.chromeless {
     overflow-y: auto;
 }
 .course-wrapper.chromeless .chat-block .main-area {
-    max-height: 95vh;
+    max-height: calc(100vh - 50px);  /* keep 50px for the actions div */
 }
 
 .chat-block .subject p {
